[metadata]
name = ess
author = Scipp contributors (https://github.com/scipp)
description = Neutron scattering tools for the European Spallation Source (ESS)
license = BSD
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scipp.github.io/ess
project_urls =
    Bug Tracker = https://github.com/scipp/ess/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    plopp>=22.12.1
    scippneutron>=22.11.0
python_requires = >=3.8
include_package_data = True

[options.extras_require]
all = ipympl; pythreejs; mpltoolbox

[options.packages.find]
where = src

[options.package_data]
plopp = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203
